<resources>
    <string name="app_name">Quiz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="otp">OTP Verification</string>
    <string name="message_verification">You will receive verification code on this mobile number</string>
    <string name="phone">Enter your phone number</string>
    <string name="code">+2-</string>
    <string name="phone_hint">0123456789</string>
    <string name="otp_get">Get Code</string>
    <string name="verification_code">Enter verification code</string>
    <string name="resend_code">Didn\'t receive the verification code?</string>
    <string name="resend_otp">Resend Code</string>
    <string name="verify">Verify</string>
    <string name="otp_otp">OTP</string>
    <string name="info">Information</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="profile_image">Profile Image</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="academic">Academic Year</string>
    <string name="set_data">Set Data</string>
    <string name="first_primary">First Primary</string>
    <string name="second_primary">Second Primary</string>
    <string name="third_primary">Third Primary</string>
    <string name="fourth_primary">Fourth Primary</string>
    <string name="fifth_primary">Fifth Primary</string>
    <string name="sixth_primary">Sixth Primary</string>
    <string name="first_preparatory">First Preparatory</string>
    <string name="second_preparatory">Second Preparatory</string>
    <string name="third_preparatory">Third Preparatory</string>
    <string name="first_secondary">First Secondary</string>
    <string name="second_secondary">Second Secondary</string>
    <string name="third_secondary">Third Secondary</string>
    <string name="academic_year">Select Academic Year</string>
    <string name="select_student_academic_year">Academic Year</string>
    <string name="date_of_barth">Date Of Barth</string>
    <string name="select_date_of_barth">Select Date Of Barth</string>
    <string name="submit">Submit</string>
    <string name="academic_years">Select Academic Years</string>
    <string name="select_teacher_academic_years">Academic Years</string>
    <string name="academic_subjects">Select Subjects</string>
    <string name="select_teacher_academic_subjects">Academic Subjects</string>
    <string name="select_student_academic">selectStudentAcademicYear</string>
    <string name="select_student_subjects">selectStudentSubjects</string>
    <string name="select_teacher_subjects">selectTeacherSubjects</string>
    <string name="select_teacher_academic">selectTeacherAcademicYears</string>

    <string-array name="academic_years_array">
        <item>First Primary</item>
        <item>Second Primary</item>
        <item>Third Primary</item>
        <item>Fourth Primary</item>
        <item>Fifth Primary</item>
        <item>Sixth Primary</item>
        <item>First Preparatory</item>
        <item>Second Preparatory</item>
        <item>Third Preparatory</item>
        <item>First Secondary</item>
        <item>Second Secondary</item>
        <item>Third Secondary</item>
    </string-array>
    <string-array name="academic_subjects_array">
        <item>English</item>
        <item>Biology</item>
        <item>Chemistry</item>
        <item>Mathematics</item>
        <item>French</item>
        <item>Arabic</item>
        <item>Physics</item>
        <item>Geology</item>
        <item>Philosophy</item>
        <item>German</item>
        <item>History</item>
        <item>Science</item>
        <item>Geography</item>
    </string-array>

    <string name="create_new_quiz">Create New Quiz</string>
    <string name="quiz_information">Quiz Information</string>
    <string name="quiz_placeholder">Quiz Placeholder</string>
    <string name="academic_subject">Select Academic Subject</string>
    <string name="duration">Duration</string>
    <string name="select_quiz_duration">Select Quiz Duration</string>
    <string name="description">Quiz Description</string>
    <string name="create">Create</string>
    <string name="type_profile">Profile</string>
    <string name="type_placeholder">Placeholder</string>

    <string name="select_quiz_subject">selectQuizSubject</string>
    <string name="select_quiz_year">selectQuizAcademicYear</string>
    <string name="uncompleted_quizzes">UnCompleted Quizzes</string>
    <string name="create_new_question">Create New Question</string>
    <string name="upload_quiz_to_server">Upload Quiz To Server</string>
    <string name="quiz_content">Quiz Content</string>
    <string name="question_information">Question Information</string>
    <string name="question_header">Question Header ?</string>
    <string name="question_body">Question body</string>
    <string name="question_image_body">Question Image Body</string>
    <string name="select_question_body_image">Select Question Body Image</string>
    <string name="body_image">Body Image</string>
    <string name="answer_type">Answer Type</string>
    <string name="type">Type</string>
    <string name="text_answer">Text Answer</string>
    <string name="image_answer">Image Answer</string>
    <string name="first_answer_text">First Answer Text</string>
    <string name="first_answer">First Answer</string>
    <string name="select_first_answer_image">Select First Image</string>
    <string name="second_answer_text">Second Answer Text</string>
    <string name="second_answer">Second Answer</string>
    <string name="select_second_answer_image">Select Second Image</string>

    <string name="third_answer_text">Third Answer Text</string>
    <string name="third_answer">Third Answer</string>
    <string name="select_third_answer_image">Select Third Image</string>

    <string name="fourth_answer_text">Fourth Answer Text</string>
    <string name="fourth_answer">Fourth Answer</string>
    <string name="select_fourth_answer_image">Select Fourth Image</string>
    <string name="preview">Preview</string>
    <string name="question_score">Question Score</string>
    <string name="score">Score</string>
    <string name="answer_body">Answer Body Text …</string>
    <string name="select_answer_body_image">Select Answer Body Image</string>
    <string name="mcq_answer_image">MCQ Answer Image</string>
    <string name="reset">reset</string>
    <string-array name="answer_type">
        <item>MCQ</item>
        <item>Essay</item>
    </string-array>
    <string name="teacher_database">Teacher Navigation Database</string>
    <string name="teacher_create">Teacher Navigation Create</string>
    <string name="teachers">Teachers</string>
    <string name="my_solutions">My Solutions</string>
    <string name="quizzes">Quizzes</string>
    <string name="quiz_description">Description</string>
    <string name="subject">Subject</string>
    <string name="questions">Questions</string>
    <string name="solve_quiz">Solve Quiz</string>
    <string name="upload_solution_to_server">Upload Solution To Server</string>
    <string name="completed_quizzes">Completed Quizzes</string>
    <string name="teacher_home">Teacher Home</string>
    <string name="students">Students</string>
    <string name="no_data">No Data</string>
    <string name="answer_score">Answer Score</string>
    <string name="answer_comment">Answer Comment …</string>

</resources>