<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="quiz"
            type="com.m391.quiz.models.QuizFirebaseModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5"
        android:background="@drawable/borders">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="@dimen/margin_5"
            android:contentDescription="@string/profile_image"
            android:padding="@dimen/padding_5"
            android:profileImage="@{quiz.quiz_image_url}"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/profile_image"
            android:orientation="vertical"
            android:padding="@dimen/padding_2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:text="@string/select_student_academic_year"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_14"
                    android:textStyle="bold|italic"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:padding="@dimen/padding_5"
                    android:text="@{quiz.quiz_academic_year}"
                    android:textSize="@dimen/font_size_12"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/subject"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_14"
                    android:textStyle="bold|italic"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:padding="@dimen/padding_5"
                    android:text="@{quiz.quiz_subject}"
                    android:textSize="@dimen/font_size_12"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/questions"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_14"
                    android:textStyle="bold|italic"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:padding="@dimen/padding_5"
                    android:text="@{String.valueOf(quiz.questions.size)}"
                    android:textSize="@dimen/font_size_12"
                    android:textStyle="bold|italic" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_image"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_5"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="@dimen/padding_5"
                    android:text="@string/duration"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_14"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:padding="@dimen/padding_5"
                    android:textSize="@dimen/font_size_12"
                    android:textStyle="bold|italic"
                    android:time="@{quiz.quiz_duration}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_5"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:padding="@dimen/padding_5"
                    android:text="@string/score"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_14"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:padding="@dimen/padding_5"
                    android:text="@{String.valueOf(quiz.quiz_score) + ` Points`}"
                    android:textSize="@dimen/font_size_12"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_5">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/quiz_description"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_14"
                    android:textStyle="bold|italic" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:padding="@dimen/padding_5"
                    android:text="@{quiz.quiz_description}"
                    android:textSize="@dimen/font_size_12"
                    android:textStyle="bold|italic" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>